Fix login and signup overflow when smaller screens

--- a/web/gazine/assets/sass/components/_footer.scss
+++ b/web/gazine/assets/sass/components/_footer.scss
@@ -1,5 +1,4 @@
 footer {
-  width: 100%;
   padding: 2rem;
   color: var(--color-grey-dark-3);
   border-top: var(--line);
